rudimentary logo support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <body>
     <main>
       <qr-code content="https://developer.mozilla.org/docs/Web/API/Web_components"></qr-code>
+      <hr />
+      <qr-code
+        content="https://vite.dev/guide/"
+        background-color="#ebeaea"
+        scale="8"
+        pixel-color="#0069c2"
+        logo="/vite.svg"
+      ></qr-code>
+      <hr />
     </main>
     <script type="module" src="/src/qr-code.js"></script>
   </body>
