--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code web component example</title>
   </head>
@@ -15,10 +14,10 @@
         background-color="#ebeaea"
         scale="8"
         pixel-color="#0069c2"
-        logo="/vite.svg"
+        logo="https://vite.dev/logo.svg"
       ></qr-code>
       <hr />
     </main>
-    <script type="module" src="/src/qr-code.js"></script>
+    <script type="module" src="./src/qr-code.js"></script>
   </body>
 </html>
