--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       ></qr-code>
       <hr />
     </main>
-    <script type="module" src="./src/qr-code.js"></script>
+    <!-- Just for demo purposes, don't use unpkg.com in production -->
+    <script type="module" src="https://www.unpkg.com/@david-koontz/qr-code@1.0.0/dist/qr-code.js"></script>
   </body>
 </html>
