--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         background-color="#ebeaea"
         scale="8"
         pixel-color="#0069c2"
-        logo="https://vite.dev/logo.svg"
+        logo="./public/vite.svg"
+      ></qr-code>
+      <hr />
+      <qr-code
+        content="https://bsky.app/profile/koontz.dev"
+        pixel-color="#1185fe"
+        logo="./public/bsky.svg"
       ></qr-code>
       <hr />
     </main>
