--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code web component example</title>
+    <link rel="preload" href="./public/vite.svg" as="image" type="image/svg+xml" />
+    <link rel="preload" href="./public/bsky.svg" as="image" type="image/svg+xml" />
   </head>
   <body>
     <main>
@@ -25,6 +27,6 @@
       <hr />
     </main>
     <!-- Just for demo purposes, don't use unpkg.com in production -->
-    <script type="module" src="https://www.unpkg.com/@david-koontz/qr-code@1.0.1/dist/qr-code.js"></script>
+    <script type="module" src="https://www.unpkg.com/@david-koontz/qr-code@latest/dist/qr-code.js"></script>
   </body>
 </html>
