--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         content="https://vite.dev/guide/"
         background-color="#ebeaea"
         scale="8"
-        pixel-color="#0069c2"
+        pixel-color="#8400d9"
         logo="./public/vite.svg"
       ></qr-code>
       <hr />
