[1.0.3] polished attribute changes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code web component example</title>
-    <link rel="preload" href="./public/vite.svg" as="image" type="image/svg+xml" />
-    <link rel="preload" href="./public/bsky.svg" as="image" type="image/svg+xml" />
+    <link rel="preload" href="./public/vite.svg" as="image" type="image/svg+xml" crossorigin="" />
+    <link rel="preload" href="./public/bsky.svg" as="image" type="image/svg+xml" crossorigin="" />
   </head>
   <body>
     <main>
